finish edit catalog

--- a/views/panel/catalogItemsEdit.hbs
+++ b/views/panel/catalogItemsEdit.hbs
@@ -24,7 +24,7 @@
                     <label for="cat_id" class="form-label">Категория</label>
                     <select class="form-select" name="cat_id" id="cat_id" required>
                     {{#each cats}}
-                        <option value="{{this.id}}" {{#if_eq this.id catalog.cat_id}}selected{{/if_eq}}>{{this.name}}</option>
+                        <option value="{{id}}" {{#if_eq id ../catalog.cat_id}}selected{{/if_eq}}>{{this.name}}</option>
                     {{/each}}
                     </select>
                 </div>
@@ -37,17 +37,16 @@
                     <input type="number" class="form-control js-price-input" id="price" name="price" value="{{catalog.price}}" onkeypress='return event.charCode >= 48 && event.charCode <= 57' required>
                 </div>
                 <div class="mb-3">
-                   <label for="description" class="form-label">Описание</label>
-                   <textarea class="form-control" id="description" name="description" rows="4">{{catalog.description}}</textarea>
+                    <label for="description" class="form-label">Описание</label>
+                    <div id="editorjs" class="form-control"></div>
+                    <textarea class="form-control" id="description" name="description" rows="4" style="display: none;;">{{encodeMyString catalog.description}}</textarea>
                 </div>
-                <div class="form-file mb-3">
-                    
-                    <input type="file" class="form-file-input" id="picture" name="file" accept="image/*" value="{{catalog.picture}}">
-                    <label class="form-file-label" for="picture">
-                        <span class="form-file-text" id="js-file-picture-text">Выбрать другое основное изображение</span>
-                        <span class="form-file-button">Выбрать</span>
-                    </label>
-                    <p><br><img src="{{catalog.picture}}" style="width:20%"></p>
+                <div class="form-file mb-3" id="js-divForNewPicture">
+                    <label for="picture" class="form-label">Основное изображение</label>
+                    <p>
+                        <img src="{{catalog.picture}}" style="width:20%">
+                    </p>
+                    <button type="button" class="btn btn-secondary" id="js-deletePicture">Удалить картинку</button>
                 </div>
 
                 {{!-- <div class="form-file mb-3">
@@ -66,7 +65,7 @@
                         <div class="col-6">
                             <label for="prop[{{@key}}][key]" class="form-label">Заголовок свойства</label>
                             <input type="text" class="form-control" id="prop[{{@key}}][key]" name="prop[{{@key}}][key]" value="{{key}}">
-                            <input type="hidden" name="prop[{{@key}}][k]" value="0">
+                            <input type="hidden" name="prop[{{@key}}][k]" value="{{@key}}">
                         </div>
                         <div class="col-6">
                             <div id="js-div-prop{{@key}}" data-cp="0">
@@ -87,7 +86,7 @@
                 <input type="hidden" name="user_id" value="{{userId}}">
                 <input type="hidden" name="shopid" value="{{shop.id}}">
                 <input type="hidden" name="item" value="{{catalog.id}}">
-                <button type="submit" class="btn btn-primary">Сохранить</button>
+                <button type="submit" class="btn btn-primary" id="saveButton">Сохранить</button>
             </form>
 
 
@@ -99,3 +98,94 @@
 
 
 
+
+<script src="/js/editorjs/editor.js"></script><!-- editor -->
+<script src="https://cdn.jsdelivr.net/npm/@editorjs/header@latest"></script><!-- Header -->
+<script src="https://cdn.jsdelivr.net/npm/@editorjs/simple-image@latest"></script><!-- Image -->
+<script src="https://cdn.jsdelivr.net/npm/@editorjs/delimiter@latest"></script><!-- Delimiter -->
+<script src="https://cdn.jsdelivr.net/npm/@editorjs/list@latest"></script><!-- List -->
+<script src="https://cdn.jsdelivr.net/npm/@editorjs/checklist@latest"></script><!-- Checklist -->
+<script src="https://cdn.jsdelivr.net/npm/@editorjs/quote@latest"></script><!-- Quote -->
+<script src="https://cdn.jsdelivr.net/npm/@editorjs/code@latest"></script><!-- Code -->
+<script src="https://cdn.jsdelivr.net/npm/@editorjs/embed@latest"></script><!-- Embed -->
+<script src="https://cdn.jsdelivr.net/npm/@editorjs/table@latest"></script><!-- Table -->
+<script src="https://cdn.jsdelivr.net/npm/@editorjs/link@latest"></script><!-- Link -->
+<script src="https://cdn.jsdelivr.net/npm/@editorjs/warning@latest"></script><!-- Warning -->
+<script src="https://cdn.jsdelivr.net/npm/@editorjs/marker@latest"></script><!-- Marker -->
+<script src="https://cdn.jsdelivr.net/npm/@editorjs/inline-code@latest"></script><!-- Inline Code -->
+
+<script>
+    const saveButton = document.getElementById('saveButton');
+
+    var editor = new EditorJS({
+      holderId: 'editorjs',
+      tools: {
+        header: {
+          class: Header,
+          inlineToolbar: ['link'],
+          config: {
+            placeholder: 'Header'
+          },
+          shortcut: 'CMD+SHIFT+H'
+        },
+        image: {
+          class: SimpleImage,
+          inlineToolbar: ['link'],
+        },
+        list: {
+          class: List,
+          inlineToolbar: true,
+          shortcut: 'CMD+SHIFT+L'
+        },
+        checklist: {
+          class: Checklist,
+          inlineToolbar: true,
+        },
+        quote: {
+          class: Quote,
+          inlineToolbar: true,
+          config: {
+            quotePlaceholder: 'Enter a quote',
+            captionPlaceholder: 'Quote\'s author',
+          },
+          shortcut: 'CMD+SHIFT+O'
+        },
+        warning: Warning,
+        marker: {
+          class:  Marker,
+          shortcut: 'CMD+SHIFT+M'
+        },
+        code: {
+          class:  CodeTool,
+          shortcut: 'CMD+SHIFT+C'
+        },
+        delimiter: Delimiter,
+        inlineCode: {
+          class: InlineCode,
+          shortcut: 'CMD+SHIFT+C'
+        },
+        linkTool: LinkTool,
+        embed: Embed,
+        table: {
+          class: Table,
+          inlineToolbar: true,
+          shortcut: 'CMD+ALT+T'
+        },
+      },
+      data: 
+        {{encodeMyString catalog.description}}
+      ,
+      onReady: function(){
+        //saveButton.click();
+      },
+      onChange: function() {
+        console.log('something changed');
+      }
+    });
+
+    saveButton.addEventListener('click', function () {
+      editor.save().then((savedData) => {
+        document.getElementById('description').value = JSON.stringify(savedData);
+      });
+    });
+</script>
