--- a/views/about.hbs
+++ b/views/about.hbs
@@ -20,7 +20,7 @@
                 <p>Чтоб вы&nbsp;смогли спокойно заниматься продажами и&nbsp;продвижением, не&nbsp;тратя время на&nbsp;администрирование магазина.</p>
                 <p>Просто мы&nbsp;верим в&nbsp;то, что технологии должны быть удобными, понятными и&nbsp;недорогими.</p>
                 <p>И, самое главное, работающими.</p>
-                <p style="font-weight: bold; text-align: right;">Приятно познакомиться, ваш Simpl.tech</p>
+                <p style="font-weight: bold; text-align: right;">Приятно познакомиться, ваш Simple Platform</p>
             </div>
         </div>
 
