--- a/views/partials/footer-panel.hbs
+++ b/views/partials/footer-panel.hbs
@@ -68,11 +68,11 @@
       <div class="modal-body">
         <p>
             <svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="whatsapp" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" height="25px" color="#43d854"><path fill="currentColor" d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27 106.1 27h.1c122.3 0 224.1-99.6 224.1-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.2 0-65.7-8.9-94-25.7l-6.7-4-69.8 18.3L72 359.2l-4.4-7c-18.5-29.4-28.2-63.3-28.2-98.2 0-101.7 82.8-184.5 184.6-184.5 49.3 0 95.6 19.2 130.4 54.1 34.8 34.9 56.2 81.2 56.1 130.5 0 101.8-84.9 184.6-186.6 184.6zm101.2-138.2c-5.5-2.8-32.8-16.2-37.9-18-5.1-1.9-8.8-2.8-12.5 2.8-3.7 5.6-14.3 18-17.6 21.8-3.2 3.7-6.5 4.2-12 1.4-32.6-16.3-54-29.1-75.5-66-5.7-9.8 5.7-9.1 16.3-30.3 1.8-3.7.9-6.9-.5-9.7-1.4-2.8-12.5-30.1-17.1-41.2-4.5-10.8-9.1-9.3-12.5-9.5-3.2-.2-6.9-.2-10.6-.2-3.7 0-9.7 1.4-14.8 6.9-5.1 5.6-19.4 19-19.4 46.3 0 27.3 19.9 53.7 22.6 57.4 2.8 3.7 39.1 59.7 94.8 83.8 35.2 15.2 49 16.5 66.6 13.9 10.7-1.6 32.8-13.4 37.4-26.4 4.6-13 4.6-24.1 3.2-26.4-1.3-2.5-5-3.9-10.5-6.6z" class=""></path></svg>
-            <a href="https://wa.me/79996161514">Написать нам в WhatsApp</a>
+            <a href="https://wa.me/79996164542">Написать нам в WhatsApp</a>
         </p>
         <p>
             <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="paper-plane" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" height="25px" color="#0088cc"><path fill="currentColor" d="M476 3.2L12.5 270.6c-18.1 10.4-15.8 35.6 2.2 43.2L121 358.4l287.3-253.2c5.5-4.9 13.3 2.6 8.6 8.3L176 407v80.5c0 23.6 28.5 32.9 42.5 15.8L282 426l124.6 52.2c14.2 6 30.4-2.9 33-18.2l72-432C515 7.8 493.3-6.8 476 3.2z" class=""></path></svg>
-            <a href="https://t-do.ru/simpl_tech">Написать нам в Telegram</a>
+            <a href="https://t-do.ru/simple_platform">Написать нам в Telegram</a>
         </p>
         <p>
             <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="mailbox" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" height="25px"><path fill="currentColor" d="M144 64A144 144 0 0 0 0 208v208a32 32 0 0 0 32 32h256V208A144 144 0 0 0 144 64zm80 176a16 16 0 0 1-16 16H80a16 16 0 0 1-16-16v-32a16 16 0 0 1 16-16h128a16 16 0 0 1 16 16zM432 64H244.87C290.23 95.87 320 148.48 320 208v240h224a32 32 0 0 0 32-32V208A144 144 0 0 0 432 64zm80 208a16 16 0 0 1-16 16h-32a16 16 0 0 1-16-16v-48h-56a8 8 0 0 1-8-8v-16a8 8 0 0 1 8-8h104a16 16 0 0 1 16 16z" class=""></path></svg>
@@ -116,6 +116,43 @@
                 <input type="hidden" name="shopid" value="{{shop.id}}">
                 <button type="submit" class="btn btn-primary">Сохранить</button>
             </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+<div class="modal fade" id="addBanners" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Добавить новый баннер</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form class="js-form needs-validation g-3" method="POST" action="" enctype="multipart/form-data">
+          <div class="form-group mb-2">
+              <div class="custom-file">
+                  <input type="file" class="custom-file-input" name="file" id="customFile">
+                  <label class="custom-file-label" id="js-custom-file-label" for="customFile">Добавить баннер (размер 1280х370px)</label>
+              </div>
+          </div>
+          <div class="mb-3">
+              <label for="name" class="form-label">Название (ALT)*</label>
+              <input type="text" class="form-control" id="name" name="name" required>
+          </div>
+          <div class="mb-3">
+              <label for="link" class="form-label">Ссылка</label>
+              <input type="text" class="form-control" id="link" name="link">
+          </div>
+            <input type="hidden" name="_csrf" value="{{csrf}}">
+            <input type="hidden" name="user_id" value="{{userId}}">
+            <input type="hidden" name="shopid" value="{{shop.id}}">
+            <button type="submit" class="btn btn-primary">Сохранить</button>
+        </form>
       </div>
     </div>
   </div>
