--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -3,6 +3,7 @@
                     <li><a href="/about">О платформе</a></li>
                     <li><a href="/price">Прайс</a></li>
                     <li><a href="/contacts">Контакты</a></li>
+                    <li><a href="/use">Применение</a></li>
                 </ul>
             </div>
             <div class="col-3 col-md-2"><a href="/"><img src="/images/logoS.svg" class="logo-main img-fluid" alt="simple platform"></a></div>
