--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,6 +8,7 @@
                             <li><a href="/about">О платформе</a></li>
                             <li><a href="/price">Прайс</a></li>
                             <li><a href="/contacts">Контакты</a></li>
+                            <li><a href="/use">Применение</a></li>
                         </ul>
                     </div>
                     <div class="col-3 col-md-2"><img src="/images/logoS.svg" class="logo-main img-fluid" alt="simple platform"></div>
