--- a/views/partials/head-shop.hbs
+++ b/views/partials/head-shop.hbs
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{{shop.name}}</title>
+        <title>{{#if title}}{{title}} | {{/if}}{{shop.name}}</title>
         <meta name='description' content='{{shop.description}}'>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="/css/shop.css">
@@ -19,10 +19,10 @@
     <header>
         <div class="container">
             <div class="row">
-                <div class="col-6 col-md-2 align-self-center">
+                <div class="col-4 col-md-2 align-self-center">
                     <a href="/{{shop.url}}"><img src="{{shop.logo}}" class="logo"></a>
                 </div>
-                <div class="col-md-2 block-contacts align-self-center">
+                <div class="xs-hide col-md-2 block-contacts align-self-center">
                     {{#if shop.phone}}<a href="tel:{{shop.phone}}" class="header-phone">{{shop.phone}}</a>{{/if}}
                     <div>
                         {{#if shop.wa}}
@@ -42,14 +42,14 @@
                         {{/if}}
                     </div>
                 </div>
-                <div class="col-md-5 align-self-center">
+                <div class="col-md-5 align-self-center xs-hide">
                     <ul class="menu">
                         <li><a href="/{{shop.url}}/catalog/">Каталог</a></li>
                         {{#if shop.adresses}}<li><a href="/{{shop.url}}/contacts/">Адреса магазинов</a></li>{{/if}}
                         {{#if shop.texts}}<li><a href="/{{shop.url}}/payment_delivery/">Оплата и доставка</a></li>{{/if}}
                     </ul>
                 </div>
-                <div class="col-md-3 text-right align-self-center">
+                <div class="col-md-3 xs-hide text-right align-self-center">
                     <div class="row">
                         <div class="col align-self-center">
                             <span class="js-price" id="js-basket-price">0</span>
@@ -57,9 +57,30 @@
                         <span id="js-count-basket">0</span> товаров </div>
                         <div class="col align-self-center text-left"><a href="/{{shop.url}}/basket/" class="btn btn-outline-primary">Корзина</a></div>
                     </div>
-                     
-                    
+                </div>
+                <div class="col-8 align-self-center text-right">
+                    <div class="xs-show xs-icon-menu">
+                        {{#if shop.phone}}
+                        <a href="tel:{{shop.phone}}">
+                            <svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-phone" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" d="M11 1H5a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM5 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H5z"/>
+                            <path fill-rule="evenodd" d="M8 14a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
+                            </svg>
+                        </a>
+                        {{/if}}
+                        <span class="xs-basket">
+                            <a href="">
+                            <svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-cart3" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm7 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
+                            </svg>
+                            <span class="badge bg-success">0</span>
+                            </a>
+                        </span>
+                    </div>
                 </div>
             </div>
         </div>
     </header>
+    <div class="xs-show xs-link-catalog">
+        <a href="/{{shop.url}}/catalog/">Каталог <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-caret-right" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M6 12.796L11.481 8 6 3.204v9.592zm.659.753l5.48-4.796a1 1 0 0 0 0-1.506L6.66 2.451C6.011 1.885 5 2.345 5 3.204v9.592a1 1 0 0 0 1.659.753z"/></svg></a>
+    </div>
