--- a/views/shop/main.hbs
+++ b/views/shop/main.hbs
@@ -16,6 +16,7 @@
 </div>
 
 <div class="container">
+    <h1 class="text-center p-2">{{shop.name}}</h1>
     <section class="homePage-categories">
 		<div class="categoriesBlock-container">
 		    <div id="categories-block" class="categoriesBlock">
