--- a/views/index.hbs
+++ b/views/index.hbs
@@ -35,7 +35,7 @@
             <div class="block-text-and-img">
                 <div class="row">
                     <div class="col-md-7">
-                        <h1 class="mt-md-7 mt-3">Создай свой интернет магазин за 15 минут</h1>
+                        <h1 class="mt-md-7 mt-3">Создай свой интернет-магазин за 15 минут</h1>
                         <p>Simpl Platform – удобная платформа для создания интернет-магазина.
                         <br>Подключим любую систему учёта за 1 день.
                         </p>
