--- a/views/partials/head-panel.hbs
+++ b/views/partials/head-panel.hbs
@@ -46,7 +46,7 @@
                             <ul class="sub-menu">
                                 <li><a {{#if isCatalogItem}}class="active"{{/if}} href="/panel/catalog/items/">Товары</a></li>
                                 <li><a {{#if isCatalogCats}}class="active"{{/if}} href="/panel/catalog/categorys/">Категории</a></li>
-                                <li><a href="#">Выгрузка товаров</a></li>
+                                <li><a {{#if isCatalogImport}}class="active"{{/if}} href="/panel/catalog/import/">Выгрузка товаров</a></li>
                             </ul>
                         </li>
                         <li><a href="#">
