--- a/views/shop/catalog-section.hbs
+++ b/views/shop/catalog-section.hbs
@@ -9,7 +9,7 @@
                         <div class="catalog-card__image">
                             <a href="/{{../shop.url}}/catalog-detail/{{id}}"><img src="{{picture}}" alt="{{name}}"></a>
                         </div>
-                        <a href="/{{../shop.url}}/catalog-detail/{{id}}" class="catalog-card__title">{{name}}</a>
+                        <a href="/{{../shop.url}}/catalog-detail/{{id}}" class="catalog-card__title mb-1">{{name}}</a>
                         <span class="js-price">{{price}}</span>
                         <a href="#" class="btn btn-outline-primary">В корзину</a>
                     </div>
