--- a/views/shop/contacts.hbs
+++ b/views/shop/contacts.hbs
@@ -2,7 +2,7 @@
     <h1 class="mb-2">Контакты {{shop.name}}</h1>
     {{#each shops}}
       <div class="catalog-card">
-        <h3>{{this.adress}}"</h3>
+        <h3>{{this.adress}}</h3>
         <p class="mb-3">
             {{this.desc}}
         </p>
