--- a/views/shop/main.hbs
+++ b/views/shop/main.hbs
@@ -1,7 +1,7 @@
 
 <div class="container-fluid">
  <div class="pr">
-  <div class="js-siema carousel-siema">
+  <div class="carousel-siema" id="js-siema">
     {{#each banners}}
         <div>
             {{#if link}}<a href="{{link}}">{{/if}}
