--- a/views/shop/payment_delivery.hbs
+++ b/views/shop/payment_delivery.hbs
@@ -1,13 +1,18 @@
 <div class="container mb-4">
     <h1 class="mb-2">Оплата и доставка</h1>
+    <div class="catalog-card">
 
-    <h3>Информация о доставке</h3>
-    {{texts.delivery}}
+        <h3>Информация о доставке</h3>
+        {{texts.delivery}}
+    </div>
 
     <hr>
 
-    <h3>Информация об оплате</h3>
-    {{texts.payments}}
+    <div class="catalog-card">
 
+        <h3>Информация об оплате</h3>
+        {{texts.payments}}
+
+    </div>
 
 </div>
