--- a/views/partials/footer-panel.hbs
+++ b/views/partials/footer-panel.hbs
@@ -159,6 +159,24 @@
 </div>
 
 
+<div class="modal fade" id="modal-warning" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Объявление</h5>
+        <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+         Привет, {{user.name}}! <br>
+         Мы сегодня проводим обновления работы модулей Заказы (Order) и Корзина (Basket).<br>
+         Работы будут закончены сегодня в 19:00 (UTC +10)<br>
+         Спасибо за терпение, мы стараемся сделать сервис удобным и качественным.
+
+      </div>
+    </div>
+  </div>
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="/js/bootstrap.js"></script>
 <script src="/js/inputmask.min.js"></script>
