--- a/views/partials/head-shop.hbs
+++ b/views/partials/head-shop.hbs
@@ -14,6 +14,7 @@
         <link rel="apple-touch-icon shortcut icon" sizes="120x120" href="{{shop.logo}}">
         <link rel="apple-touch-icon shortcut icon" sizes="152x152" href="{{shop.logo}}">
         <script>document.getElementsByTagName("html")[0].className += " js";</script>
+        
     </head>
     <body>
     <header>
@@ -52,9 +53,9 @@
                 <div class="col-md-3 xs-hide text-right align-self-center">
                     <div class="row">
                         <div class="col align-self-center">
-                            <span class="js-price" id="js-basket-price">0</span>
-                        <br>
-                        <span id="js-count-basket">0</span> товаров </div>
+                            {{!-- <span class="js-price" id="js-basket-price">0</span>
+                        <br> --}}
+                        <span id="js-count-header-basket" data-count="{{countBasket}}">{{countBasket}}</span> товаров </div>
                         <div class="col align-self-center text-left"><a href="/{{shop.url}}/basket/" class="btn btn-outline-primary">Корзина</a></div>
                     </div>
                 </div>
@@ -73,7 +74,7 @@
                             <svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-cart3" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm7 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
                             </svg>
-                            <span class="badge bg-success">0</span>
+                            <span class="badge bg-success" id="js-xs-count-header-basket" data-count="{{countBasket}}">{{countBasket}}</span>
                             </a>
                         </span>
                     </div>
