--- a/views/shop/catalog-item.hbs
+++ b/views/shop/catalog-item.hbs
@@ -105,7 +105,7 @@
                 {{/if}}
         </div>
         <div class="col-md-4 offset-md-1">
-            <form class="item-right-bar xs-hide">
+            <form method="POST" class="item-right-bar xs-hide">
                 {{#if item.articul}}<div class="articul mb-3">Артикул {{item.articul}}</div>{{/if}}
                 <div class="mb-3">
                     Цена:<br>
@@ -115,7 +115,7 @@
                   {{#if key}}
                     <div class="mb-3">
                         <label for="prop{{@key}}" class="form-label">{{key}}</label>
-                        <select class="form-select" id="prop{{@key}}" name="{{key}}">
+                        <select class="form-select" id="prop{{@key}}" name="prop[{{key}}]">
                             {{#each this.val}}
                                 <option value="{{this}}">{{this}}</option>
                             {{/each}}
@@ -123,6 +123,12 @@
                     </div>
                   {{/if}}
                 {{/each}}
+                <input type="hidden" name="shop" value="{{shop.url}}">
+                <input type="hidden" name="item_id" value="{{item.id}}">
+                <input type="hidden" name="name" value="{{item.name}}"> 
+                <input type="hidden" name="price" value="{{item.price}}"> 
+                <input type="hidden" name="_csrf" value="{{csrf}}">
+
                 <button type="submit" class="btn btn-primary btn-lg">
                     <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-cart3" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm7 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"></path>
@@ -135,7 +141,7 @@
 </div>
 
 <div class="buy-button-block-mobile">
-    <form class="item-right-bar">
+    <form method="POST" class="item-right-bar">
         <div class="h-line" id="js-showAllProps"></div>
         {{#if item.articul}}<div class="articul mb-1 xs-prop">Артикул {{item.articul}}</div>{{/if}}
         <div class="mb-3">
@@ -146,7 +152,7 @@
             {{#if key}}
             <div class="mb-2 xs-prop">
                 <label for="prop{{@key}}" class="form-label">{{key}}</label>
-                <select class="form-select" id="prop{{@key}}" name="{{key}}">
+                <select class="form-select" id="prop{{@key}}" name="prop[{{key}}]">
                     {{#each this.val}}
                         <option value="{{this}}">{{this}}</option>
                     {{/each}}
@@ -154,6 +160,12 @@
             </div>
             {{/if}}
         {{/each}}   
+        <input type="hidden" name="shop" value="{{shop.url}}">
+        <input type="hidden" name="item_id" value="{{item.id}}">
+        <input type="hidden" name="name" value="{{item.name}}"> 
+        <input type="hidden" name="price" value="{{item.price}}"> 
+        <input type="hidden" name="_csrf" value="{{csrf}}">
+
         <button type="submit" class="btn btn-primary btn-block">
             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-cart3" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm7 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"></path>
