--- a/views/partials/footer-main.hbs
+++ b/views/partials/footer-main.hbs
@@ -7,6 +7,7 @@
                             <p><a href="/about">О платформе</a></p>
                             <p><a href="/price">Прайс</a></p>
                             <p><a href="/contacts">Контакты</a></p>
+                            <p><a href="/use">Применение</a></p>
                         </div>
                     </div>
                 </div>
