--- a/views/partials/footer-shop.hbs
+++ b/views/partials/footer-shop.hbs
@@ -55,6 +55,11 @@
     <a href="/"><img src="/images/logoD.svg" class="simple_platform_logo"></a>
 </div>
 
+<div class="alert alert-success alert-dismissible fade show" id="addToBasket-success">
+    Товар успешно добавлен в корзину. <a href="/{{shop.url}}/basket/">Перейти в корзину</a>.
+    <button type="button" class="btn-close" data-dismiss="alert" aria-label="Close"></button>    
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="/js/bootstrap.min.js"></script>
 <script src="/js/inputmask.min.js"></script>
