--- a/views/partials/head-panel.hbs
+++ b/views/partials/head-panel.hbs
@@ -20,7 +20,7 @@
         <div class="row">
             <div class="col-md-2 my-col-no-padding">
                 <aside class="left-menu"> 
-                    <a href="/"><img src="/images/LogoS.svg" class="logo-simple"></a>
+                    <a href="/"><img src="/images/logoS.svg" class="logo-simple"></a>
                     <ul class="menu">
                         <li><a {{#if isHome}}class="active"{{/if}} href="/panel">
                                 <svg aria-hidden="true" focusable="false" data-prefix="fal" data-icon="tachometer-fast" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" class=""><path fill="currentColor" d="M411.56 173.94l-97.09 119.94c-8.09-3.69-17-5.88-26.47-5.88-35.35 0-64 28.65-64 64s28.65 64 64 64 64-28.65 64-64c0-14.26-4.82-27.3-12.71-37.94l97.14-120c5.56-6.86 4.5-16.94-2.38-22.5-6.89-5.54-16.93-4.5-22.49 2.38zM288 384c-17.67 0-32-14.33-32-32s14.33-32 32-32 32 14.33 32 32-14.33 32-32 32zm0-352C128.94 32 0 160.94 0 320c0 52.8 14.25 102.26 39.06 144.8 5.61 9.62 16.3 15.2 27.44 15.2h443c11.14 0 21.83-5.58 27.44-15.2C561.75 422.26 576 372.8 576 320c0-159.06-128.94-288-288-288zm221.5 416l-442.8.68C44 409.75 32 365.26 32 320 32 178.84 146.84 64 288 64s256 114.84 256 256c0 45.26-12 89.75-34.5 128z" class=""></path></svg>
@@ -49,16 +49,22 @@
                                 <li><a {{#if isCatalogImport}}class="active"{{/if}} href="/panel/catalog/import/">Выгрузка товаров</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">
+                        <li><a href="/panel/orders/"{{#if isOrder}} class="active"{{/if}}>
                                 <svg aria-hidden="true" focusable="false" data-prefix="fal" data-icon="shopping-cart" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="currentColor" d="M551.991 64H129.28l-8.329-44.423C118.822 8.226 108.911 0 97.362 0H12C5.373 0 0 5.373 0 12v8c0 6.627 5.373 12 12 12h78.72l69.927 372.946C150.305 416.314 144 431.42 144 448c0 35.346 28.654 64 64 64s64-28.654 64-64a63.681 63.681 0 0 0-8.583-32h145.167a63.681 63.681 0 0 0-8.583 32c0 35.346 28.654 64 64 64 35.346 0 64-28.654 64-64 0-17.993-7.435-34.24-19.388-45.868C506.022 391.891 496.76 384 485.328 384H189.28l-12-64h331.381c11.368 0 21.177-7.976 23.496-19.105l43.331-208C578.592 77.991 567.215 64 551.991 64zM240 448c0 17.645-14.355 32-32 32s-32-14.355-32-32 14.355-32 32-32 32 14.355 32 32zm224 32c-17.645 0-32-14.355-32-32s14.355-32 32-32 32 14.355 32 32-14.355 32-32 32zm38.156-192H171.28l-36-192h406.876l-40 192z" class=""></path></svg>
                                 Заказы</a></li>
-                        <li><a href="#" class="disabled">
+                        <li><a href="/panel/pay/" class="disabled">
                                 <svg aria-hidden="true" focusable="false" data-prefix="fal" data-icon="money-bill" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path fill="currentColor" d="M320 144c-53 0-96 50.1-96 112 0 61.8 43 112 96 112s96-50.1 96-112-43-112-96-112zm0 192c-35.3 0-64-35.9-64-80s28.7-80 64-80 64 35.9 64 80-28.7 80-64 80zM608 64H32C14.3 64 0 78.3 0 96v320c0 17.7 14.3 32 32 32h576c17.7 0 32-14.3 32-32V96c0-17.7-14.3-32-32-32zM32 96h64c0 35.3-28.7 64-64 64V96zm0 320v-64c35.3 0 64 28.7 64 64H32zm576 0h-64c0-35.3 28.7-64 64-64v64zm0-96c-52.9 0-96 43.1-96 96H128c0-52.9-43.1-96-96-96V192c52.9 0 96-43.1 96-96h384c0 52.9 43.1 96 96 96v128zm0-160c-35.3 0-64-28.7-64-64h64v64z" class=""></path></svg>
                                 Оплата Online</a></li>
+                        <li><a href="#">
+                            Бронирование столов
+                        </a></li>
+                        <li><a href="#">
+                            Собственные страницы
+                        </a></li>
                     </ul>
 
                     <div class="menu-support">
-                        <a href="#" data-toggle="modal" data-target="#support"><img src="/images/undraw_active_support_6rwo.svg"></a>
+                        <a href="#" data-toggle="modal" data-target="#support"><img src="/images/undraw_active_support_6rwo.svg"> Поддержка</a>
                     </div>
                 </aside>
             </div>
