--- a/views/shop/catalog-section.hbs
+++ b/views/shop/catalog-section.hbs
@@ -11,7 +11,15 @@
                         </div>
                         <a href="/{{../shop.url}}/catalog-detail/{{id}}" class="catalog-card__title mb-1">{{name}}</a>
                         <span class="js-price">{{price}}</span>
-                        <a href="#" class="btn btn-outline-primary">В корзину</a>
+                        <button 
+                                data-shop="{{../shop.url}}" 
+                                data-id="{{id}}" 
+                                data-name="{{name}}" 
+                                data-price="{{price}}" 
+                                data-csrf="{{../csrf}}"
+                                class="btn btn-outline-primary js-btn-add-cart"
+                                type=""
+                            >В корзину</button>
                     </div>
                 </div>
             {{/each}}
