add coment detail order

--- a/views/partials/footer-panel.hbs
+++ b/views/partials/footer-panel.hbs
@@ -168,9 +168,7 @@
       </div>
       <div class="modal-body">
          Привет, {{user.name}}! <br>
-         Мы сегодня проводим обновления работы модулей Заказы (Order) и Корзина (Basket).<br>
-         Работы будут закончены сегодня в 19:00 (UTC +10)<br>
-         Спасибо за терпение, мы стараемся сделать сервис удобным и качественным.
+         Мы приняли решение, что до конца этого года наш сервис будет предоставляться на бесплатной основе. Все обновления и дополнительные функции будут появляться по мере их разработки.
 
       </div>
     </div>
