--- a/views/panel/order-detail.hbs
+++ b/views/panel/order-detail.hbs
@@ -52,9 +52,15 @@
             {{#if_eq orderDetail.delivery 'pickup'}}Самовывоз из магазина{{/if_eq}}
         </div>
         {{#if orderDetail.adress}}
-        <div class="col-12">
+        <div class="col-12 mb-3">
             <small>Адрес доставки:</small><br>
             {{orderDetail.adress}}
+        </div>
+        {{/if}}
+        {{#if orderDetail.comment}}
+        <div class="col-12">
+            <small>Комментарий клиента:</small><br>
+            {{orderDetail.comment}}
         </div>
         {{/if}}
     </div>
@@ -68,7 +74,7 @@
             </div>
             <hr>
     {{#each  orderDetail.items.basket}}
-        <div class="row">
+        <div class="row mb-4">
                 <div class="col-3">
                     {{#each ../catalog}}
                         {{#if_eq ../this.item_id id }}
